// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES THEME NATIVE 1`] = `
<ReactAny>
  <ReactAny
    style={
      Object {
        "background": "lightblue",
        "color": "black",
        "fontWeight": "bold",
      }
    }
  >
    Default Theme
  </ReactAny>
  <ThemeProviderGeneric
    theme="..."
  >
    <ReactAny
      style={
        Object {
          "background": "lightcyan",
          "color": "darkgray",
          "fontWeight": "bold",
        }
      }
    >
      Custom Theme
    </ReactAny>
  </ThemeProviderGeneric>
</ReactAny>
`;

exports[`WITH STYLES THEME WEB 1`] = `
<ReactAny>
  <ReactAny
    className="c b a"
    trace={
      Array [
        ".c { font-weight:bold /*label[1]*/ }",
        ".b { background:lightblue /*label[0]*/ }",
        ".a { color:black /*label[0]*/ }",
      ]
    }
  >
    Default Theme
  </ReactAny>
  <ThemeProviderGeneric
    theme="..."
  >
    <ReactAny
      className="c e d"
      trace={
        Array [
          ".c { font-weight:bold /*label[1]*/ }",
          ".e { background:lightcyan /*label[0]*/ }",
          ".d { color:darkgray /*label[0]*/ }",
        ]
      }
    >
      Custom Theme
    </ReactAny>
  </ThemeProviderGeneric>
</ReactAny>
`;
